--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 body {
   background: rgb(42, 50, 158);
   color: #fff;
-  font-family: monospace;
+  font-family: 'Roboto', sans-serif;
   font-size: 16px;
   height: 100vh;
   margin: 0;
@@ -65,6 +65,7 @@ body {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center;
+  cursor : pointer;
 }
 
 .button-info {
